// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AspectRatioBoxBody renders: with default styles 1`] = `
<AspectRatioBoxBody>
  <Block
    bottom={0}
    data-baseweb="aspect-ratio-box-body"
    position="absolute"
    top={0}
    width="100%"
  >
    <Block
      bottom={0}
      data-baseweb="aspect-ratio-box-body"
      forwardedRef={null}
      position="absolute"
      top={0}
      width="100%"
    >
      <ForwardRef
        $as="div"
        $bottom={0}
        $position="absolute"
        $top={0}
        $width="100%"
        data-baseweb="aspect-ratio-box-body"
      >
        <MockStyledComponent
          $as="div"
          $bottom={0}
          $position="absolute"
          $top={0}
          $width="100%"
          data-baseweb="aspect-ratio-box-body"
          forwardedRef={null}
        >
          <div
            data-baseweb="aspect-ratio-box-body"
            styled-component="true"
            test-style="{
  \\"position\\": \\"absolute\\",
  \\"width\\": \\"100%\\",
  \\"top\\": 0,
  \\"bottom\\": 0
}"
          />
        </MockStyledComponent>
      </ForwardRef>
    </Block>
  </Block>
</AspectRatioBoxBody>
`;

exports[`AspectRatioBoxBody renders: with overridden styles 1`] = `
<AspectRatioBoxBody
  overrides={
    Object {
      "Block": Object {
        "style": Object {
          "marginBottom": "10px",
        },
      },
    }
  }
>
  <Block
    bottom={0}
    data-baseweb="aspect-ratio-box-body"
    overrides={
      Object {
        "Block": Object {
          "style": Object {
            "marginBottom": "10px",
          },
        },
      }
    }
    position="absolute"
    top={0}
    width="100%"
  >
    <Block
      bottom={0}
      data-baseweb="aspect-ratio-box-body"
      forwardedRef={null}
      overrides={
        Object {
          "Block": Object {
            "style": Object {
              "marginBottom": "10px",
            },
          },
        }
      }
      position="absolute"
      top={0}
      width="100%"
    >
      <ForwardRef
        $as="div"
        $bottom={0}
        $position="absolute"
        $style={
          Object {
            "marginBottom": "10px",
          }
        }
        $top={0}
        $width="100%"
        data-baseweb="aspect-ratio-box-body"
      >
        <MockStyledComponent
          $as="div"
          $bottom={0}
          $position="absolute"
          $style={
            Object {
              "marginBottom": "10px",
            }
          }
          $top={0}
          $width="100%"
          data-baseweb="aspect-ratio-box-body"
          forwardedRef={null}
        >
          <div
            data-baseweb="aspect-ratio-box-body"
            styled-component="true"
            test-style="{
  \\"position\\": \\"absolute\\",
  \\"width\\": \\"100%\\",
  \\"top\\": 0,
  \\"bottom\\": 0,
  \\"marginBottom\\": \\"10px\\"
}"
          />
        </MockStyledComponent>
      </ForwardRef>
    </Block>
  </Block>
</AspectRatioBoxBody>
`;
